tinyc/test/good/fun-forward-incomplete.c
struct s;
struct s foo( struct s s );

int main()
{
    return 0;
}
