tinyc/test/bad/fun-arg-incomplete.c
struct s;
int foo( struct s s );

int main()
{
    return 0;
}

int foo( struct s s )
{
    return 1;
}
